added chair block rideable entity